Mon Oct 21 21:23:15 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fixes for new subdir recursion method.

Thu Sep  5 18:48:46 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (all-unix): Fix symlinking so building in a link
 		farm or in source directory won't result in dangling
 		db-ndbm.h symlink.

Sat Aug 31 01:34:41 1996  Ken Raeburn  <raeburn@cygnus.com>

	* makeshlib.sh (*-*-aix*): Echo more stuff before running it.
	Always use /bin/ld -- the GNU linker isn't supported yet.  Don't
	pass -x or -bfilelist.  Whitespace changes.

Thu Aug 15 20:48:16 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* makeshlib.sh (alpha-*-osf*): add -expect_unresolved (due to
		dbm_error and dbm_clearerr not being in libc when making
		libkdb5)

Thu Aug 15 16:30:00 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (all unix): "install" the db-ndbm header file with
	 	symlinks.

Sun Jul 28 00:43:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* makeshlib.sh (aix Allow symbols for the shared library to
        overide symbols from libc.

Wed Jul 10 00:52:28 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in (all-unix): "install" the db2 headers and libs with
 	symlinks.  db2 has its own self-contained autoconf setup, so this
 	is necessary here.
	(all-unix): before installing db2, remove the links, so ln won't
	fail the second time.

Tue Jul  9 19:29:12 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in (CONFIG_DIRS): always build db2

Mon May 20 11:05:49 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* libupdate.sh: allow to deal with multiple directories at once

Sun May 19 23:53:21 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* libupdate.sh: do the shift before the assignments

Sat May 18 02:05:39 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* libupdate.sh: Define $library from the positional arguments
		before --force uses $library.

Tue Apr 16 22:26:36 1996  Ken Raeburn  <raeburn@cygnus.com>

	Wed Mar  6 05:02:36 1996  Mark Eichin  <eichin@cygnus.com>
